public_html/2015/secret-2e44fac40ce121fc2afdc4cd9bbfe607/1097/source/compile
source.c: In function ‘main’:
source.c:30:25: error: expected ‘)’ before ‘{’ token
   while((j>=0) && (!ada){
                         ^
source.c:46:2: error: expected expression before ‘}’ token
  }
  ^
